assets/css/style.css
/* ... */
.menu__bar-popup {
  display: none;
  opacity: 0;
  visibility: hidden;
  position: fixed;
  top: 0;
  left: 0;
  width: 400px;
  height: 100%;
  z-index: 9999;
  transition: 0.5s;
  transform: translateX(-100%);
  padding: 40px;
  background: var(--primary-color-1);
  overflow-y: auto;
}
.menu__bar-popup.show {
  opacity: 1;
  visibility: visible;
  transform: translateX(0);
}
.menu__bar-popup.show .menu__bar-popup-left-social {
  background: var(--color-1);
}
.menu__bar-popup.show .menu__bar-popup-right-contact {
  transition: transform 2s ease 0.4s, opacity 2s ease 0.4s;
  transform: translateX(0);
  opacity: 1;
}
.menu__bar-popup-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 40px;
}
.menu__bar-popup-top .logo img {
  max-width: 155px;
}
.menu__bar-popup-top .close i {
  background: var(--color-5);
  width: 40px;
  color: var(--text-white);
  height: 40px;
  line-height: 40px;
  text-align: center;
  border-radius: 50%;
  cursor: pointer;
  display: block;
  font-size: 20px;
}
.menu__bar-popup-top .close:hover {
  animation: rotate 0.4s ease 0s;
}
.menu__bar-popup-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  transition: 0.8s;
  visibility: hidden;
  z-index: 9;
  background: var(--primary-color-1);
  opacity: 0.8;
  display: none;
}
.menu__bar-popup-overlay.show {
  visibility: visible;
  width: 100%;
}

@media (max-width: 1550px) {
  .header__area-menubar-center-menu ul li:nth-child(n+4) .sub-menu li .sub-menu {
    right: 100%;
    left: initial;
  }
}
@media (max-width: 1299px) {
  .header__four .header__area-menubar-right-btn {
    display: none;
  }
}
@media (max-width: 1199px) {
  .header__area-menubar-right-btn {
    display: none;
  }
}
@media (max-width: 991px) {
  .header__area {
    padding: 25px 0;
  }
  .header__area-menubar-right-search, .header__area-menubar-right-sidebar, .header__area-menubar-center {
    display: none;
  }
  .menu__bar {
    display: block;
  }
  .menu__bar-popup {
    display: block;
  }
  .menu__bar-popup-overlay {
    display: block;
  }
}
@media (max-width: 520px) {
  .menu__bar-popup {
    width: 100%;
  }
  .menu__bar-popup-overlay {
    display: none;
  }
}
/*==========================================================================
* Banner One CSS
==========================================================================*/
.banner__one {
  position: relative;
  z-index: 1;
}
.banner__one-image {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  z-index: 1;
}
.banner__one-image::before {
  content: "";
  position: absolute;
  background-image: none !important;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  z-index: -1;
}
.banner__one-image::after {
  content: "";
  position: absolute;
  background-image: none !important;
  left: 0;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}
.banner__one-content {
  visibility: hidden;
  padding: 140px 0px 160px 0px;
}
.banner__one-content .subtitle {
  border-color: rgba(var(--border-color-2), 0.1);
  color: var(--text-white);
  background: rgba(26, 88, 88, 0.4784313725);
}
.banner__one-content .subtitle::before {
  background: var(--text-white);
}
.banner__one-content h1 {
  font-size: 80px;
  line-height: 92px;
  max-width: 580px;
  margin: 0px 0px 20px 0px;
  color: var(--text-white);
}
.banner__one-content h1 span {
  color: var(--secondary-color);
}
.banner__one-content p {
  max-width: 480px;
  color: var(--text-white);
  margin: 0px 0px 40px 0px;
}
.banner__one-content .default_button:hover {
  background: var(--color-5);
}
.banner__one .swiper-slide-active .banner__one-content {
  visibility: visible;
}
.banner__one-dots {
  position: absolute;
  bottom: 80px;
}
.banner__one-dots .swiper-pagination-bullet {
  border-radius: 50%;
  width: 15px;
  height: 15px;
  transition: all 0.4s ease-out 0s;
  opacity: 1;
  margin: 0 15px !important;
  position: relative;
  z-index: 9;
  background: rgba(255, 255, 255, 0.2588235294);
}
.banner__one-dots .swiper-pagination-bullet::after {
  position: absolute;
  content: "";
  width: 30px;
  height: 30px;
  border: 1px solid var(--secondary-color);
  top: 50%;
  border-radius: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0;
}
.banner__one-dots .swiper-pagination-bullet-active {
  background: var(--secondary-color);
}
.banner__one-dots .swiper-pagination-bullet-active::after {
  opacity: 1;
}

/*==========================================================================
* Banner Two CSS
==========================================================================*/
.banner__two {
  background: var(--color-3);
  position: relative;
  z-index: 1;
  padding-bottom: 70px;
}
.banner__two-content {
  padding: 120px 0 60px 0;
  max-width: 1000px;
  margin: 0 auto;
}
.banner__two-content .subtitle {
  background: var(--bg-white);
}
.banner__two-content h1 {
  margin-bottom: 24px;
}
.banner__two-content p {
  max-width: 650px;
  margin: 0 auto;
  font-size: 20px;
  line-height: 32px;
}
.banner__two-content-button {
  margin-top: 45px;
}
.banner__two img {
  border-radius: 15px;
}

/*==========================================================================
* Banner One CSS
==========================================================================*/
.banner__three {
  position: relative;
  z-index: 1;
}
.banner__three-image {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  z-index: 1;
}
.banner__three-image::before {
  content: "";
  position: absolute;
  background-color: transparent;
  background: linear-gradient(47deg, rgba(6, 50, 49, 0.8392156863) 0%, rgba(230, 98, 98, 0) 100%);
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  z-index: -1;
}
.banner__three-content {
  visibility: hidden;
  padding: 330px 0px 190px 0px;
}
/* ... */

